[vue][datepicker] Scrollbar fix

--- a/frontend/express/public/stylesheets/vue/clyvue.scss
+++ b/frontend/express/public/stylesheets/vue/clyvue.scss
@@ -482,6 +482,7 @@ body {
                 mix-blend-mode: normal;
                 opacity: 0.1;
                 top: 0px;
+                z-index: 2000;
             }
             &::after {
                 // shadow
@@ -498,7 +499,7 @@ body {
         }
 
         &__date-table-wrapper {
-            margin: 0 16px 12px 16px;
+            margin: 0 16px 16px 16px;
         }
 
         &__shortcuts-col, &__calendars-col {
